--- a/react/components/BulletGroup/styles.css
+++ b/react/components/BulletGroup/styles.css
@@ -1,21 +1,32 @@
-.bullet_item,
-.bullet_item--image{
-  width: 80px;
+.bullet_item--image {
+  width: 200px;
+  min-width: 200px;
 }
-.bullet_item{
-  margin-right: 15px;
-}
-.bullet_item--link{
-  text-decoration: none;
-}
-.bullet_item--tilte{
-  font-size: 12px;
-  text-align: center;
-}
-@media screen and (min-width:760px){
-  .bullet_item
-  .bullet_item--image{
-    width: 80px;
-  }
 
+.bullet_item--link {
+  text-decoration: none;
+  color: #E2001A;
+  font-size: 14px
+}
+
+.bullet_container {
+  display: flex;
+  overflow: auto
+}
+
+
+.bullet_container::-webkit-scrollbar {
+  height: 3px
+}
+
+.bullet_container::-webkit-scrollbar-track,
+.bullet_container::-webkit-scrollbar-track {
+  background-clip: padding-box;
+  background-color: #E2001A;
+  border-right: 13px solid transparent;
+  border-left: 13px solid transparent
+}
+
+.bullet_container::-webkit-scrollbar-thumb {
+  background-color: rgb(146, 145, 145);
 }
